--- a/public/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
+++ b/public/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
@@ -39,6 +39,7 @@
 	height: 100%;
 	overflow: hidden;
 	border-radius: 0;
+	resize: none;
 }
 #floater-map-tools-widget.pinned .floater-header {
 	height: 1.5rem;
