--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -18,10 +18,12 @@ body.mode-3d .maps-container {
 }
 .maps-container #maps-container-bar-bottom {
 	flex-grow: 0;
-	height: 0;
-
 	height: 40px;
 	background: #ff0;
+	display: none;
+}
+.maps-container #maps-container-bar-bottom.open {
+	display: block;
 }
 .maps-container .map-tools {
 	width: 0;
