--- a/public/__new/js/view/worldWind/WorldWindMap.css
+++ b/public/__new/js/view/worldWind/WorldWindMap.css
@@ -44,7 +44,8 @@
 }
 
 /* period label */
-.map-name-label {
+.map-name-label,
+.layer-info-label {
 	color: rgba(189,192,197,1);
 	background: rgba(33,38,53,.9);
 	font-weight: 500;
