--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,20 @@ body {
   background: rgba(33,38,53,.9);
   z-index: 10000;
 }
+.ptr-overlay-content {
+  position: absolute;
+  width: 500px;
+  height: 200px;
+}
+.ptr-overlay-content h3 {
+  color: rgb(148,152,160);
+  font-size: 1.5rem;
+  margin-bottom: .3rem;
+}
+.ptr-overlay-content p {
+  color: rgb(148,152,160);
+  font-size: 1rem;
+}
 .ptr-overlay.open {
   display: block;
 }
