Timeline: Pass active layers & periods into timeline

--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -154,3 +154,6 @@ body.mode-3d .maps-container {
 .ptr-timeline-layer-period-symbol {
 	fill: #0022cc;
 }
+.ptr-timeline-layer-period-symbol.active {
+	fill: #cc0044;
+}
