--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -148,6 +148,11 @@ body.mode-3d .maps-container {
 	stroke: rgba(0,0,0,.3);
 }
 
+.ptr-timeline-year > line {
+	stroke-width: 1;
+	stroke: rgba(0,0,0,.6);
+}
+
 .ptr-timeline-layer-period {
 	cursor: pointer;
 }
