Timeline: adjust layer periods base colour

--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -160,7 +160,7 @@ body.mode-3d .maps-container {
 	fill: rgba(0,0,0,0);
 }
 .ptr-timeline-layer-period-symbol {
-	fill: #0022cc;
+	fill: #6594e2;
 }
 .ptr-timeline-layer-period-symbol.active {
 	fill: #cc0044;
