--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -152,6 +152,11 @@ body.mode-3d .maps-container {
 	stroke-width: 1;
 	stroke: rgba(0,0,0,.6);
 }
+.ptr-timeline-year-label {
+	font-family: "Open Sans", sans-serif;
+	font-size: 10px;
+	fill: rgba(0,0,0,.6);
+}
 
 .ptr-timeline-layer-period {
 	cursor: pointer;
