--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -172,6 +172,14 @@ body.mode-3d .maps-container {
 }
 
 
+.ptr-timeline-mouse > rect {
+	fill: rgba(76, 177, 204, .2);
+}
+.ptr-timeline-mouse > line {
+	stroke-width: 1;
+	stroke: rgba(76, 177, 204, .6);
+}
+
 .ptr-timeline-tooltip {
 	position: absolute;
 	bottom: 50px;
