--- a/src/index.css
+++ b/src/index.css
@@ -85,13 +85,40 @@ body {
   pointer-events: none;
 }
 .ptr-view-selection-selector.ptr-ui-select .Select-control,
-.ptr-view-selection-selector.ptr-ui-select .Select.is-disabled .Select-control{
+.ptr-view-selection-selector.ptr-ui-select .Select.is-disabled .Select-control
+{
   background-color: rgba(255,255,255,.15);
   border: 0;
   border-radius: 2px;
   height: 1.5rem;
   transition: background-color .3s ease-in-out;
 }
+.VirtualizedSelectOption {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0 .5rem;
+  cursor: pointer;
+  background-color: #6a6e78;
+  color: rgb(204,207,211);
+}
+.VirtualizedSelectFocusedOption {
+  background-color: rgba(0, 126, 255, 0.1);
+}
+.VirtualizedSelectDisabledOption {
+  opacity: 0.5;
+  background-color: #6a6e78;
+  color: rgb(204,207,211);
+}
+.VirtualizedSelectSelectedOption {
+  font-weight: bold;
+  background-color: #6a6e78;
+  color: rgb(204,207,211);
+}
+
 .ptr-view-selection-selector.ptr-ui-select .Select-control .Select-value {
   line-height: 1.8rem;
 }
