--- a/public/__new/styles/projects.css
+++ b/public/__new/styles/projects.css
@@ -27,7 +27,7 @@ html.dromas .custom-views-category:hover {
 	background: rgba(172,98,33,.2);
 }
 html.dromas .about-window-header {
-	background: url('../img/dromas/dromas-background.jpeg') no-repeat;
+	background-image: url('../img/dromas/dromas-background.jpeg');
 }
 html.dromas .about-window-header-title {
 	background: rgba(172,98,33,.7);
