--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -190,13 +190,20 @@ body.mode-3d .maps-container {
 	border: 1px solid rgba(0,0,0,.2);
 	font-size: 12px;
 	padding: 10px;
+
+	transition:
+		height .2s ease-in-out;
 }
 .ptr-timeline-tooltip-layer {
 	margin: 2px 0;
-	padding-left: 10px;
-	position: relative;
+	display: flex;
 }
-.ptr-timeline-tooltip-layer::before {
+.ptr-timeline-tooltip-layer > div:first-child {
+	position: relative;
+	width: 10px;
+	flex-grow: 0;
+}
+.ptr-timeline-tooltip-layer > div:first-child::before {
 	content: ' ';
 	position: absolute;
 	top: 6px;
@@ -207,6 +214,10 @@ body.mode-3d .maps-container {
 	border-radius: 2px;
 	background: #6594e2;
 }
-.ptr-timeline-tooltip-layer.active::before {
+.ptr-timeline-tooltip-layer.active > div:first-child::before {
 	background: #cc0044;
+}
+.ptr-timeline-tooltip-layer-periods {
+	color: #666;
+	text-align: right;
 }
