Hide components according to scope settings

--- a/public/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.html
+++ b/public/__new/js/view/widgets/WorldWindWidget/panels/WorldWindWidgetPanel.html
@@ -1,4 +1,4 @@
-<div id="{{panelId}}-panel">
+<div id="{{panelId}}-panel" class="widget-panel">
 	<div class="panel-header open" id="{{panelId}}-panel-header">
 		<div class="panel-icon expand-icon"></div>
 		<div class="panel-icon folder-icon"></div>
