--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -128,6 +128,10 @@ body.mode-3d .maps-container {
 	width: 100%;
 }
 
+.ptr-timeline-content {
+	width: 100%;
+}
+
 .ptr-timeline-month > rect {
 	fill: #fff;
 }
