Add possibility to modify exaggeration.

--- a/public/__new/js/view/worldWind/controls/Controls.html
+++ b/public/__new/js/view/worldWind/controls/Controls.html
@@ -1,4 +1,8 @@
 <div id="map-controls">
+	<div class="exaggerate-control control">
+		<a href="#" id="exaggerate-plus-control"><i class="fa fa-arrow-up"></i></a>
+		<a href="#" id="exaggerate-minus-control"><i class="fa fa-arrow-down"></i></a>
+	</div>
 	<div class="zoom-control control">
 		<a href="#" id="zoom-plus-control"><i class="fa fa-plus"></i></a>
 		<a href="#" id="zoom-minus-control"><i class="fa fa-minus"></i></a>
