Update for Invaze project

--- a/public/__new/js/view/widgets/CustomViewsWidget/AboutWindow/AboutWindow.html
+++ b/public/__new/js/view/widgets/CustomViewsWidget/AboutWindow/AboutWindow.html
@@ -1,4 +1,4 @@
-<div id="about-window">
+<div id="about-window" class="{{introClass}}">
 	<div class="about-window-header">
 		<h1 class="about-window-header-title">{{projectName}}</h1>
 	</div>
