Attribute sets and Attributes stores

--- a/public/__new/js/view/widgets/CustomViewsWidget/AboutWindow/AboutWindow.css
+++ b/public/__new/js/view/widgets/CustomViewsWidget/AboutWindow/AboutWindow.css
@@ -34,6 +34,7 @@
 .about-window-header-title {
 	font-family: "Roboto";
 	font-size: 4rem;
+	font-weight: 300;
 	color: white;
 	background: rgba(153,54,75,.85);
 	padding: 8rem 2rem 12rem 2rem;
