--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
       Overlay
         Aoi Overlay
       View Selector
+      Windows
 
 */
 
@@ -266,3 +267,5 @@ body {
 .ptr-timeline-out-of-scope-overlay {
 	fill: rgba(125,125,125,.2);
 }
+
+/* == Windows =================================== */
