--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,9 @@ body {
 /* ================================================================
    === COMPONENTS =================================================
    ================================================================ */
+#app-container > div {
+	height: 100%;
+}
 
 /* == Change Review Map Control =================================== */
 .ptr-change-review-map-control {
@@ -269,3 +272,6 @@ body {
 }
 
 /* == Windows =================================== */
+.ptr-window-container {
+  	height: 100%;
+}
