Separate components.windows actions and selectors

--- a/src/components/presentation/windows/PantherWindow/PantherWindow.css
+++ b/src/components/presentation/windows/PantherWindow/PantherWindow.css
@@ -14,7 +14,7 @@
 	display: flex;
 	height: 2.3rem;
 }
-.ptr-window-header.floating {
+.ptr-window.floating .ptr-window-header {
 	cursor: move;
 }
 .ptr-window-title {
