--- a/src/components/presentation/Window/Window.css
+++ b/src/components/presentation/Window/Window.css
@@ -6,11 +6,13 @@
 .ptr-window {
 	flex-direction: column;
 	z-index: 80000;
+	box-shadow: 0 0 4px rgb(136, 136, 136);
 }
 
 /* === HEADER ================== */
 .ptr-window-header {
 	background: rgba(153,54,75,.9);
+	border-radius: .1rem .1rem 0 0;
 	display: flex;
 	height: 2.3rem;
 }
@@ -47,6 +49,7 @@
 
 /* === CONTENT ================= */
 .ptr-window-content {
-	background: rgba(255,255,255,.9);
+	background: rgba(233,235,237,.95);
+	border-radius: 0 0 .1rem .1rem;
 	flex: 1;
 }
