--- a/src/components/presentation/controls/scenarios/CaseList/CaseList.css
+++ b/src/components/presentation/controls/scenarios/CaseList/CaseList.css
@@ -8,7 +8,12 @@
 	border-radius: 2px;
 	cursor: pointer;
 	margin-bottom: .5rem;
+	max-width: 40rem;
 	padding: .5rem .5rem 1rem;
+	transition: box-shadow .3s ease-in-out;
+}
+.case-list-item:hover {
+	box-shadow: 0 0 2px 1px rgba(33,38,53,.25);
 }
 .case-list-item > h4 {
 	color: rgb(65,69,81);
