active case and active scenarios actions

--- a/src/components/presentation/controls/scenarios/CaseList/CaseList.css
+++ b/src/components/presentation/controls/scenarios/CaseList/CaseList.css
@@ -1,5 +1,10 @@
 .case-list-container {
 	padding: .7rem 1rem 1rem .7rem;
+	height: 100%;
+	overflow-y: auto;
+}
+.case-list-wrap {
+	height: 100%;
 }
 .case-list-item {
 	background: #fff;
