--- a/src/components/presentation/controls/scenarios/CaseDetail/CaseDetail.css
+++ b/src/components/presentation/controls/scenarios/CaseDetail/CaseDetail.css
@@ -1,3 +1,7 @@
+.case-detail-wrap {
+	overflow-y: auto;
+	height: 100%;
+}
 .case-detail-header {
 	background: rgba(204,207,211,1);
 	padding: 1rem .7rem;
@@ -7,10 +11,4 @@
 }
 .case-detail-body {
 	padding: .7rem;
-}
-
-.scenario-container {
-	border: 1px solid silver;
-	padding: .5rem;
-	margin-bottom: .7rem;
 }
